add refresh api
